Fix loss of focus and activation when hiding a child widget

Don't deactivate the active window when hiding its child if it has
another child that currently has the focus.

Task-number: QTBUG-19196
Reviewed-by: Sami Merila